Fixed mobile scrollbar and redirect after login

--- a/ProfilePage/src/App.css
+++ b/ProfilePage/src/App.css
@@ -116,7 +116,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -227,6 +227,10 @@ button:hover{
   .main{
     width:95%;
     padding-top: 5rem;
+  }
+
+  ::-webkit-scrollbar {
+    display: none;
   }
 
 
